# first-app

./: .cursorrules  .gitignore  Notes.txt  README.md  pyproject.toml  requirements.txt
course files/: 2.3 Stopwords.ipynb  2.5 Tokenizing Text.ipynb  2.6 Stemming.ipynb  2.7 Lemmatization.ipynb  3.2 POS tagging.ipynb
src/: 2.2 Lowercase.py  4.2 Rule Based Sentiment.py  5.2 Bag of Words.py  NER.py  POS tagging.py  __init__.py  main.py  pre-trained-transformers.py
src/first_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
